# python-project-83

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py
page_analyzer/templates/: index.html
