[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Marina Vasyukova <marina.vasyukova@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
