[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Marina Vasyukova <marina.vasyukova@icloud.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
Flask = "^2.3.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
